--- a/config/storage.yml
+++ b/config/storage.yml
@@ -2,16 +2,16 @@ local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
 
-test:
-  service: Disk
-  root: <%= Rails.root.join("tmp/storage") %>
+# test:
+#   service: Disk
+#   root: <%= Rails.root.join("tmp/storage") %>
 
-amazon:
-  service: S3
-  access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
-  secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
-  bucket: "finalprojectbucket"
-  region: "us-west-2"
+# amazon:
+#   service: S3
+#   access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
+#   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
+#   bucket: "finalprojectbucket"
+#   region: "us-west-2"
 # Remember not to checkin your GCS keyfile to a repository
 # google:
 #   service: GCS
