--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "proxy": "http://localhost:3000",
   "dependencies": {
+    "@cloudinary/react": "^1.5.0",
+    "@cloudinary/url-gen": "^1.8.6",
     "@emotion/styled": "^11.10.5",
     "@hello-pangea/dnd": "^16.0.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.1.3",
     "cloudinary": "^1.32.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
